# SteamAccount-Switcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  application.rc.in  config.h.in
l18n/: zh_CN.ts
lang/: SteamAccountSwitcher_zh-CN.ts  lang.qrc.in
res/: res.qrc
src/: account.h  loginuserVDF.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  steam_account.cpp  steam_account.h
